[package]
name = "tmns_coord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
env_logger = "0.11.3"
libm = "0.2.8"
log = "0.4.21"

[[bin]]
name  = "tmns-coordinate-convert"
doc = true
test  = false
bench = false

